--- a/FlowToDo/FlowToDo.csproj
+++ b/FlowToDo/FlowToDo.csproj
@@ -11,7 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="version.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="Resources\FlowToDo.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="version.txt" />
   </ItemGroup>
 
 </Project>
